Ajustes de responsive
Ajuste en responsive , boton galeria , y modales

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="keywords" content="trp,team,portada,">
-    <meta name="description" content="Pagina oficial de miembros del team trp">
+    <meta name="description" content="Pagina oficial de streamers que conforman al team trp">
 
     <title>Pagina Principal del Team T.R.P.</title>
     <link rel="stylesheet" href="css/estilos.css" />
