--- a/redes.html
+++ b/redes.html
@@ -30,7 +30,7 @@
     </div>
 
 
-    <fieldset>
+    <content id="con">
 <div class="banner">
 <!--Canales TRP--> 
     <a href="https://www.instagram.com/theredpatrol_team/?hl=es-la" ><img src="media/igtrp.png" alt="Banner que lleva hacia el instagram del Team"class="banner__igtrp"></a>
@@ -42,7 +42,7 @@
 <img src="media/bannerprincess.gif" alt="Banner con informacion de las redes de princess nuala"class="banner__bprincess">
 
 </div>
-</fieldset>
+</content>
 
 <br><br><br>
 <footer>
