cambios color fonts y agregados

--- a/aylencita.html
+++ b/aylencita.html
@@ -3,13 +3,13 @@
 <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
-    <title>Juegos en el team TRP</title>
+    <title>-[T.R.P]-||Aylencita</title>
     <link rel="stylesheet" href="css/estilos.css" />
-    <meta name="keywords" content="juegos,actuales,terminados,siguientes,proximamente">
+    <meta name="keywords" content="aylencita,DBD">
     <meta name="description" content="Pagina oficial de streamers que conforman al team trp">
-
 </head>
 <body>
+
 <!--Menu-->
 <div class="encabezado-de-pagina">
     <img src="media/logo.png" alt="logo trp" class="encabezado-de-pagina__logo-pagina">&nbsp;&nbsp;
@@ -27,31 +27,21 @@
     </ul>
     <t class="encabezado-de-pagina__trp-grande">T.R.P. TEAM</t>
     </div>
-        
-        <h1 >Bienvenido a la seccion de Juegos</h1>
+<h1 class="centrar">-[T.R.P]-||Aylencita</h1>
 
-<!--en donde esta el nombre del juego tambien poner fotos del mismo mientras se jugaba o links hacia clips-->
-
-    <h3>Juegos mas vistos en Streams de la T.R.P.</h3>
-    <ul>
-        <li class="liSolo liSolo--dbd">Dead By Daylight</li>
-        <li class="liSolo liSolo--sot">Sea of Thieves</li>
-        <li class="liSolo liSolo--ow">Overwatch</li>
-    </ul>
-    <h3>Proximos Juegos</h3>
-        <ul>
-            <li class="liSolo liSolo--little2">Little nightmares II</li>
-            <li class="liSolo liSolo--nssot">Nueva season en Sea of Thieves</li>
-            <li class="liSolo liSolo--re8">Resident evil VIII</li>
-        </ul>
-    <h3>Juegos ya terminados</h3>
-        <ul>
-            <li class="liSolo liSolo--lis">Life is Strange</li>
-            <li class="liSolo liSolo--little1">Little nightmares 1 + dlc</li>
-            <li class="liSolo liSolo--outlast">Outlast 1 + whistleblower</li>
-        </ul>
-
-
+<!--Logo de canal de cada Integrante-->
+<content id="co">
+<div class="logint">
+<img src="media/aylen.png" alt="imagen de aylencita"class="logint__aylen"></a>
+<aside>Genero de juegos favorito: No tiene favoritismo.</aside><br><br>
+<aside>Juego/saga favoritas: Valorant.</aside><br><br>
+<aside>Mayor skills en: Survivals Online.</aside><br><br>
+<aside>Skills: Suele adaptarse a cualquier juego, logrando ser buena en estos, si un juego con historia le gusta de verdad lo juega hasta terminarlo si es posible en el mismo dia que lo comenzo.</aside><br><br>
+<aside>Contras: Muy competitiva, no tiene mucha paciencia al jugar con personas random y aun menos en juegos puzle, no es buena opcion que la hagas perder.</aside><br><br>
+<aside>Historia: Su historia con los videojuegos comenzo hace muy poco, mas exactamente en cuanto conocio a 2 de los actuales miembros del grupo (Draxtos y DiegoGunner). Comenzo jugando algunas partidas con ellos para terminar jugando noches enteras hasta que salia el sol. Actualmente cuenta con mas de 1000 hs jugadas en DBD, no le molesta jugar sola de todas formas.</aside>
+<div class="reset"></div>
+</div>
+</content>
 <br><br><br>
 <footer>
 
