--- a/diego.html
+++ b/diego.html
@@ -3,13 +3,13 @@
 <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
-    <title>Juegos en el team TRP</title>
+    <title>-[T.R.P]-||DiegoGunner</title>
     <link rel="stylesheet" href="css/estilos.css" />
-    <meta name="keywords" content="juegos,actuales,terminados,siguientes,proximamente">
+    <meta name="keywords" content="diegoGunner,tilt,tatuador,amigo,mod">
     <meta name="description" content="Pagina oficial de streamers que conforman al team trp">
-
 </head>
 <body>
+
 <!--Menu-->
 <div class="encabezado-de-pagina">
     <img src="media/logo.png" alt="logo trp" class="encabezado-de-pagina__logo-pagina">&nbsp;&nbsp;
@@ -27,31 +27,21 @@
     </ul>
     <t class="encabezado-de-pagina__trp-grande">T.R.P. TEAM</t>
     </div>
-        
-        <h1 >Bienvenido a la seccion de Juegos</h1>
+<h1 class="centrar">-[T.R.P]-||DiegoGunner</h1>
 
-<!--en donde esta el nombre del juego tambien poner fotos del mismo mientras se jugaba o links hacia clips-->
-
-    <h3>Juegos mas vistos en Streams de la T.R.P.</h3>
-    <ul>
-        <li class="liSolo liSolo--dbd">Dead By Daylight</li>
-        <li class="liSolo liSolo--sot">Sea of Thieves</li>
-        <li class="liSolo liSolo--ow">Overwatch</li>
-    </ul>
-    <h3>Proximos Juegos</h3>
-        <ul>
-            <li class="liSolo liSolo--little2">Little nightmares II</li>
-            <li class="liSolo liSolo--nssot">Nueva season en Sea of Thieves</li>
-            <li class="liSolo liSolo--re8">Resident evil VIII</li>
-        </ul>
-    <h3>Juegos ya terminados</h3>
-        <ul>
-            <li class="liSolo liSolo--lis">Life is Strange</li>
-            <li class="liSolo liSolo--little1">Little nightmares 1 + dlc</li>
-            <li class="liSolo liSolo--outlast">Outlast 1 + whistleblower</li>
-        </ul>
-
-
+<!--Logo de canal de cada Integrante-->
+<content id="co">
+<div class="logint">
+<img src="media/diegogunner.png" alt="imagen de Diego Gunner"class="logint__diego"></a>
+<aside>Genero de juegos favorito: No tiene favoritismo pero odia el Terror.</aside><br><br>
+<aside>Juego/saga favoritas: Dead By Daylight.</aside><br><br>
+<aside>Mayor skills en: Survivals Online.</aside><br><br>
+<aside>Skills: No le importa jugar cualquier tipo de juego, en los momentos que no estajugando, suele buscar información para mejorar sus habilidades y compartir con sus compañeros nuevas formas o mecanicas y asi aumentar el win rate. Se preocupa muchos por sus amigos incluso llegando a dar la vida por ellos en los juegos con tal de que se salven</aside><br><br>
+<aside>Contras: Es muy facil de que se enoje en los juegos online de indole competitiva, ya que no le gusta perder ni que sus compañeros pierdan.</aside><br><br>
+<aside>Historia: Diego uno de los 2 primeros integrantes junto a DratoS, se conocieron en un stream de DBD y comenzaron a jugar juntos. Ahi seria cuando entablarian una buena amistad, llevandolos a jugar casi todos los juegos juntos. Muy conocido por todo el mundo por ser mod en muchisimos canales, y por su buena onda. El Tatuador de la T.R.P. actualmente esta en descanso del mundo del streaming, pero su regreso esta a la vuelta de la esquina.</aside>
+<div class="reset"></div>
+</div>
+</content>
 <br><br><br>
 <footer>
 
