--- a/draxtos.html
+++ b/draxtos.html
@@ -3,13 +3,13 @@
 <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
-    <title>Juegos en el team TRP</title>
+    <title>-[T.R.P]-||DraxtoS</title>
     <link rel="stylesheet" href="css/estilos.css" />
-    <meta name="keywords" content="juegos,actuales,terminados,siguientes,proximamente">
+    <meta name="keywords" content="draxtoS, rusheador , silent hill , terror , carry">
     <meta name="description" content="Pagina oficial de streamers que conforman al team trp">
-
 </head>
 <body>
+
 <!--Menu-->
 <div class="encabezado-de-pagina">
     <img src="media/logo.png" alt="logo trp" class="encabezado-de-pagina__logo-pagina">&nbsp;&nbsp;
@@ -27,31 +27,21 @@
     </ul>
     <t class="encabezado-de-pagina__trp-grande">T.R.P. TEAM</t>
     </div>
-        
-        <h1 >Bienvenido a la seccion de Juegos</h1>
+<h1 class="centrar">-[T.R.P]-||DraxtoS</h1>
 
-<!--en donde esta el nombre del juego tambien poner fotos del mismo mientras se jugaba o links hacia clips-->
-
-    <h3>Juegos mas vistos en Streams de la T.R.P.</h3>
-    <ul>
-        <li class="liSolo liSolo--dbd">Dead By Daylight</li>
-        <li class="liSolo liSolo--sot">Sea of Thieves</li>
-        <li class="liSolo liSolo--ow">Overwatch</li>
-    </ul>
-    <h3>Proximos Juegos</h3>
-        <ul>
-            <li class="liSolo liSolo--little2">Little nightmares II</li>
-            <li class="liSolo liSolo--nssot">Nueva season en Sea of Thieves</li>
-            <li class="liSolo liSolo--re8">Resident evil VIII</li>
-        </ul>
-    <h3>Juegos ya terminados</h3>
-        <ul>
-            <li class="liSolo liSolo--lis">Life is Strange</li>
-            <li class="liSolo liSolo--little1">Little nightmares 1 + dlc</li>
-            <li class="liSolo liSolo--outlast">Outlast 1 + whistleblower</li>
-        </ul>
-
-
+<!--Logo de canal de cada Integrante-->
+<content id="co">
+<div class="logint">
+<img src="media/draxtos.png" alt="imagen de draxtos"class="logint__draxtos"></a>
+<aside>Genero de juegos favorito: Terror.</aside><br><br>
+<aside>Juego/saga favoritas: Silent hill.</aside><br><br>
+<aside>Mayor skills en: Shooters.</aside><br><br>
+<aside>Skills :Completa juegos en uno o muy pocos dias, bueno en juegos puzle/acertijo , se adapta y aprende muy rapidamente a cualquier tipo de juego, enseña a sus compañeros a aprender / mejorar mecanicas en los juegos. Suele carrear.</aside><br><br>
+<aside>Contras: Al ser rusheador suele aburrirse rapidamente de juegos que no contienen historia, no le gusta perder , si un juego no le gusta de entrada es muy dificil hacer que lo quiera jugar, su internet es realmente muy malo.</aside><br><br>
+<aside>Historia: Draxtos comenzo a jugar videojuegos desde muy tempranada edad, al principio comenzo con la consola conocida como sega genesis pero al muy poco tiempo cambio a pc, y fue ahi donde comenzo a jugar juegos Shooter como por ejemplo , Counter Strike - Half Life - Kiss Psycho Circus, entre otros, dandole de esta manera mejor habilidad para afrontar juegos de ese genero. Silent hill Su juego preferido seria quien le daria su amor por el genero de terror psicologico / puzle que le duraria hasta la actualidad. No se sabe el numero exacto de juegos que ha rusheado, pero si se conoce una creciente lista que actualmente oscila en mas de 200 juegos terminados.</aside>
+<div class="reset"></div>
+</div>
+</content>
 <br><br><br>
 <footer>
 
