--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <meta name="keywords" content="trp,team,portada,">
     <meta name="description" content="Pagina oficial de streamers que conforman al team trp">
-
     <title>Pagina Principal del Team T.R.P.</title>
     <link rel="stylesheet" href="css/estilos.css" />
     
@@ -22,12 +21,12 @@
     <li><a href="redes.html">Redes</a></li>
     <li><a href="streams.html">Streams</a></li>
     <li><a href="juegos.html">juegos</a></li>
-    <li><a href="integrantes.html">Integrantes</a>
+    <li><t id="integra">Integrantes</t>
         <ul class="integrantes">
-            <li><a href="integrantes.html">DraxtoS</a></li>
-            <li><a href="integrantes.html">Aylencita</a></li>
-            <li><a href="integrantes.html">Princess_nuala</a></li>
-            <li><a href="integrantes.html">DiegoGunner</a></li>
+            <li><a href="draxtos.html">DraxtoS</a></li>
+            <li><a href="aylencita.html">Aylencita</a></li>
+            <li><a href="princess.html">Princess_nuala</a></li>
+            <li><a href="diego.html">DiegoGunner</a></li>
         </ul>
 </ul>
 <t class="encabezado-de-pagina__trp-grande">T.R.P. TEAM</t>
