--- a/princess.html
+++ b/princess.html
@@ -3,13 +3,13 @@
 <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
-    <title>Juegos en el team TRP</title>
+    <title>-[T.R.P]-||Princess_Nuala</title>
     <link rel="stylesheet" href="css/estilos.css" />
-    <meta name="keywords" content="juegos,actuales,terminados,siguientes,proximamente">
+    <meta name="keywords" content="princess_nuala,divertida,amable,buena,streaming">
     <meta name="description" content="Pagina oficial de streamers que conforman al team trp">
-
 </head>
 <body>
+
 <!--Menu-->
 <div class="encabezado-de-pagina">
     <img src="media/logo.png" alt="logo trp" class="encabezado-de-pagina__logo-pagina">&nbsp;&nbsp;
@@ -27,31 +27,21 @@
     </ul>
     <t class="encabezado-de-pagina__trp-grande">T.R.P. TEAM</t>
     </div>
-        
-        <h1 >Bienvenido a la seccion de Juegos</h1>
+<h1 class="centrar">-[T.R.P]-||Princess_Nuala</h1>
 
-<!--en donde esta el nombre del juego tambien poner fotos del mismo mientras se jugaba o links hacia clips-->
-
-    <h3>Juegos mas vistos en Streams de la T.R.P.</h3>
-    <ul>
-        <li class="liSolo liSolo--dbd">Dead By Daylight</li>
-        <li class="liSolo liSolo--sot">Sea of Thieves</li>
-        <li class="liSolo liSolo--ow">Overwatch</li>
-    </ul>
-    <h3>Proximos Juegos</h3>
-        <ul>
-            <li class="liSolo liSolo--little2">Little nightmares II</li>
-            <li class="liSolo liSolo--nssot">Nueva season en Sea of Thieves</li>
-            <li class="liSolo liSolo--re8">Resident evil VIII</li>
-        </ul>
-    <h3>Juegos ya terminados</h3>
-        <ul>
-            <li class="liSolo liSolo--lis">Life is Strange</li>
-            <li class="liSolo liSolo--little1">Little nightmares 1 + dlc</li>
-            <li class="liSolo liSolo--outlast">Outlast 1 + whistleblower</li>
-        </ul>
-
-
+<!--Logo de canal de cada Integrante-->
+<content id="co">
+<div class="logint">
+<img src="media/princess.png" alt="imagen de princess Nuala"class="logint__princess"></a>
+<aside>Genero de juegos favorito: No tiene favoritismo.</aside><br><br>
+<aside>Juego/saga favoritas: Dead By Daylight.</aside><br><br>
+<aside>Mayor skills en: Juegos de estrategia.</aside><br><br>
+<aside>Skills: Es muy buena en juegos de estrategia como Age of Empires, siempre busca divertirse con las personas que la acompañan en los juegos, intenta siempre ayudar a los demas hasta el ultimo momento, adora jugando con sus amigos, no le teme a jugar algo nuevo.</aside><br><br>
+<aside>Contras: Es realmente muy distraida, al punto de no escucharte si le explicas algo ... por 3era vez. Sus ganas de ayudar hasta el ultimo momento muchas veces le juega una mala pasada.</aside><br><br>
+<aside>Historia: Princess la ultima en ser integrada al team , comenzo su vida en los videojuegos ya hace varios años, si bien siempre jugo y aun lo hace para divertirse a diferencia de los demas integrantes su amor por los videojuegos la llevo a cruzarse en el camino de Aylencita quien entablaria una buena amistad con ella y se la presentaria a los otros 2 integrantes. Al principio no habia mucha simpatia con DraxtoS pero con el tiempo y luego de muchas horas de juego, se harian buenos amigos lo que la llevaria a ser una T.R.P. Actualmente Prncess es la miembro mas activa en Streaming del grupo siendo querida por todos gracias a su amabilidad y respetada gracias a que sus mods son los demas integrantes quienen no perdonan una a la hora de banear gente.</aside>
+<div class="reset"></div>
+</div>
+</content>
 <br><br><br>
 <footer>
 
