--- a/galeria.html
+++ b/galeria.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
+<head>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/estilos.css" />
 <meta name="keywords" content="galeria,videos,imagenes,media">
 <meta name="description" content="Pagina oficial de streamers que conforman al team trp">
-<head>
     <title>Galeria Team TRP</title>
 </head>
 <body>
@@ -16,12 +16,12 @@
         <li><a href="redes.html">Redes</a></li>
         <li><a href="streams.html">Streams</a></li>
         <li><a href="juegos.html">juegos</a></li>
-        <li><a href="integrantes.html">Integrantes</a>
+        <li><t id="integra">Integrantes</t>
             <ul class="integrantes">
-                <li><a href="integrantes.html">DraxtoS</a></li>
-                <li><a href="integrantes.html">Aylencita</a></li>
-                <li><a href="integrantes.html">Princess_nuala</a></li>
-                <li><a href="integrantes.html">DiegoGunner</a></li>
+                <li><a href="draxtos.html">DraxtoS</a></li>
+                <li><a href="aylencita.html">Aylencita</a></li>
+                <li><a href="princess.html">Princess_nuala</a></li>
+                <li><a href="diego.html">DiegoGunner</a></li>
             </ul>
     </ul>
     <t class="encabezado-de-pagina__trp-grande">T.R.P. TEAM</t>
