--- a/redes.html
+++ b/redes.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
-    <title>Redes Team TRP</title>
-    <link rel="stylesheet" href="css/estilos.css" />
-    <meta name="keywords" content="redes,contacto,sociales">
-    <meta name="description" content="Pagina oficial de streamers que conforman al team trp">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
+<title>Redes Team TRP</title>
+<link rel="stylesheet" href="css/estilos.css" />
+<meta name="keywords" content="redes,contacto,sociales">
+<meta name="description" content="Pagina oficial de streamers que conforman al team trp">
 
 </head>
 
@@ -18,23 +18,23 @@
         <li><a href="redes.html">Redes</a></li>
         <li><a href="streams.html">Streams</a></li>
         <li><a href="juegos.html">juegos</a></li>
-        <li><a href="integrantes.html">Integrantes</a>
+        <li><t id="integra">Integrantes</t>
             <ul class="integrantes">
-                <li><a href="integrantes.html">DraxtoS</a></li>
-                <li><a href="integrantes.html">Aylencita</a></li>
-                <li><a href="integrantes.html">Princess_nuala</a></li>
-                <li><a href="integrantes.html">DiegoGunner</a></li>
+                <li><a href="draxtos.html">DraxtoS</a></li>
+                <li><a href="aylencita.html">Aylencita</a></li>
+                <li><a href="princess.html">Princess_nuala</a></li>
+                <li><a href="diego.html">DiegoGunner</a></li>
             </ul>
     </ul>
     <t class="encabezado-de-pagina__trp-grande">T.R.P. TEAM</t>
     </div>
 
 
-    <content id="con">
+<content id="con">
 <div class="banner">
 <!--Canales TRP--> 
-    <a href="https://www.instagram.com/theredpatrol_team/?hl=es-la" ><img src="media/igtrp.png" alt="Banner que lleva hacia el instagram del Team"class="banner__igtrp"></a>
-    <a href="https://www.youtube.com/channel/UCYDTo9rtFykEa-isCOhG3aQ" ><img src="media/ytbtrp.png" alt="Banner que lleva hacia la pagina de youtube del Team" class="banner__ytbtrp"></a>
+    <a href="https://www.instagram.com/theredpatrol_team/?hl=es-la"target="_blank"><img src="media/igtrp.png" alt="Banner que lleva hacia el instagram del Team"class="banner__igtrp"></a>
+    <a href="https://www.youtube.com/channel/UCYDTo9rtFykEa-isCOhG3aQ"target="_blank"><img src="media/ytbtrp.png" alt="Banner que lleva hacia la pagina de youtube del Team" class="banner__ytbtrp"></a>
 <!--canales integrantes-->
 <img src="Media/bannerdrax.gif" alt="Banner con informacion de las redes de draxtos" class="banner__bdrax">
 <img src="media/bannerdiego.gif" alt="Banner con informacion de las redes de diegogunner" class="banner__bdiego">
