--- a/streams.html
+++ b/streams.html
@@ -17,12 +17,12 @@
         <li><a href="redes.html">Redes</a></li>
         <li><a href="streams.html">Streams</a></li>
         <li><a href="juegos.html">juegos</a></li>
-        <li><a href="integrantes.html">Integrantes</a>
+        <li><t id="integra">Integrantes</t>
             <ul class="integrantes">
-                <li><a href="integrantes.html">DraxtoS</a></li>
-                <li><a href="integrantes.html">Aylencita</a></li>
-                <li><a href="integrantes.html">Princess_nuala</a></li>
-                <li><a href="integrantes.html">DiegoGunner</a></li>
+                <li><a href="draxtos.html">DraxtoS</a></li>
+                <li><a href="aylencita.html">Aylencita</a></li>
+                <li><a href="princess.html">Princess_nuala</a></li>
+                <li><a href="diego.html">DiegoGunner</a></li>
             </ul>
     </ul>
     <t class="encabezado-de-pagina__trp-grande">T.R.P. TEAM</t>
