nuevos alt - y ordenado

--- a/diego.html
+++ b/diego.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/estilos.css" />
     <meta name="keywords" content="diegoGunner,tilt,tatuador,amigo,mod">
     <meta name="description" content="Pagina oficial de streamers que conforman al team trp">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
@@ -26,25 +27,25 @@
             </ul>
     </ul>
     <t class="encabezado-de-pagina__trp-grande">T.R.P. TEAM</t>
-    </div>
+</div>
 <h1 class="centrar">-[T.R.P]-||DiegoGunner</h1>
 
 <!--Logo de canal de cada Integrante-->
 <content id="co">
-<div class="logint">
-<img src="media/diegogunner.png" alt="imagen de Diego Gunner"class="logint__diego"></a>
-<aside>Genero de juegos favorito: No tiene favoritismo pero odia el Terror.</aside><br><br>
-<aside>Juego/saga favoritas: Dead By Daylight.</aside><br><br>
-<aside>Mayor skills en: Survivals Online.</aside><br><br>
-<aside>Skills: No le importa jugar cualquier tipo de juego, en los momentos que no estajugando, suele buscar información para mejorar sus habilidades y compartir con sus compañeros nuevas formas o mecanicas y asi aumentar el win rate. Se preocupa muchos por sus amigos incluso llegando a dar la vida por ellos en los juegos con tal de que se salven</aside><br><br>
-<aside>Contras: Es muy facil de que se enoje en los juegos online de indole competitiva, ya que no le gusta perder ni que sus compañeros pierdan.</aside><br><br>
-<aside>Historia: Diego uno de los 2 primeros integrantes junto a DratoS, se conocieron en un stream de DBD y comenzaron a jugar juntos. Ahi seria cuando entablarian una buena amistad, llevandolos a jugar casi todos los juegos juntos. Muy conocido por todo el mundo por ser mod en muchisimos canales, y por su buena onda. El Tatuador de la T.R.P. actualmente esta en descanso del mundo del streaming, pero su regreso esta a la vuelta de la esquina.</aside>
-<div class="reset"></div>
-</div>
+    <div class="logint">
+        <img src="media/diegogunner.png" alt="imagen de Diego Gunner"class="logint__diego"></a>
+        <aside>Genero de juegos favorito: No tiene favoritismo pero odia el Terror.</aside><br><br>
+        <aside>Juego/saga favoritas: Dead By Daylight.</aside><br><br>
+        <aside>Mayor skills en: Survivals Online.</aside><br><br>
+        <aside>Skills: No le importa jugar cualquier tipo de juego, en los momentos que no estajugando, suele buscar información para mejorar sus habilidades y compartir con sus compañeros nuevas formas o mecanicas y asi aumentar el win rate. Se preocupa muchos por sus amigos incluso llegando a dar la vida por ellos en los juegos con tal de que se salven</aside><br><br>
+        <aside>Contras: Es muy facil de que se enoje en los juegos online de indole competitiva, ya que no le gusta perder ni que sus compañeros pierdan.</aside><br><br>
+        <aside>Historia: Diego uno de los 2 primeros integrantes junto a DratoS, se conocieron en un stream de DBD y comenzaron a jugar juntos. Ahi seria cuando entablarian una buena amistad, llevandolos a jugar casi todos los juegos juntos. Muy conocido por todo el mundo por ser mod en muchisimos canales, y por su buena onda. El Tatuador de la T.R.P. actualmente esta en descanso del mundo del streaming, pero su regreso esta a la vuelta de la esquina.</aside>
+        <div class="reset"></div>
+    </div>
 </content>
 <br><br><br>
-<footer>
 
+<footer>
 <!--pie de pagina-->
 <div class="pie-de-pagina" > 
     <a href="informacion.html" class="pie-de-pagina__informacion">Información</a> <br>
@@ -109,15 +110,17 @@
         </div>
     </div>
 </div>
-<img src="media/mail.png" class="pie-de-pagina__icono-mail">
-<img src="media/info.png" class="pie-de-pagina__icono-info">
-<img src="media/reco.png" class="pie-de-pagina__icono-reco">
-<img src="media/mapa.png" class="pie-de-pagina__icono-mapa">
+<img src="media/mail.png" class="pie-de-pagina__icono-mail" alt="icono mail">
+<img src="media/info.png" class="pie-de-pagina__icono-info" alt="icono informacion">
+<img src="media/reco.png" class="pie-de-pagina__icono-reco" alt="icono recomendaciones">
+<img src="media/mapa.png" class="pie-de-pagina__icono-mapa" alt="icono mapa de sitio">
 <t class="pie-de-pagina__slogan alinearGridCentro">NUNCA DESAFIES A UN TRP SI TU INTENCION ES SALIR VICTORIOSO DE ESE CAMPO DE BATALLA</t>
 </div>
-<a href="index.html" alt="logo trp"><img src="media/logo.png" class="logo-dos"></a>
+<a href="index.html"><img src="media/logo.png" class="logo-dos" alt="logo trp"></a>
 </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
+<!--js-->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
