--- a/draxtos.html
+++ b/draxtos.html
@@ -31,20 +31,20 @@
 
 <!--Logo de canal de cada Integrante-->
 <content id="co">
-<div class="logint">
-<img src="media/draxtos.png" alt="imagen de draxtos"class="logint__draxtos"></a>
-<aside>Genero de juegos favorito: Terror.</aside><br><br>
-<aside>Juego/saga favoritas: Silent hill.</aside><br><br>
-<aside>Mayor skills en: Shooters.</aside><br><br>
-<aside>Skills :Completa juegos en uno o muy pocos dias, bueno en juegos puzle/acertijo , se adapta y aprende muy rapidamente a cualquier tipo de juego, enseña a sus compañeros a aprender / mejorar mecanicas en los juegos. Suele carrear.</aside><br><br>
-<aside>Contras: Al ser rusheador suele aburrirse rapidamente de juegos que no contienen historia, no le gusta perder , si un juego no le gusta de entrada es muy dificil hacer que lo quiera jugar, su internet es realmente muy malo.</aside><br><br>
-<aside>Historia: Draxtos comenzo a jugar videojuegos desde muy tempranada edad, al principio comenzo con la consola conocida como sega genesis pero al muy poco tiempo cambio a pc, y fue ahi donde comenzo a jugar juegos Shooter como por ejemplo , Counter Strike - Half Life - Kiss Psycho Circus, entre otros, dandole de esta manera mejor habilidad para afrontar juegos de ese genero. Silent hill Su juego preferido seria quien le daria su amor por el genero de terror psicologico / puzle que le duraria hasta la actualidad. No se sabe el numero exacto de juegos que ha rusheado, pero si se conoce una creciente lista que actualmente oscila en mas de 200 juegos terminados.</aside>
-<div class="reset"></div>
-</div>
+    <div class="logint">
+        <img src="media/draxtos.png" alt="imagen de draxtos"class="logint__draxtos"></a>
+        <aside>Genero de juegos favorito: Terror.</aside><br><br>
+        <aside>Juego/saga favoritas: Silent hill.</aside><br><br>
+        <aside>Mayor skills en: Shooters.</aside><br><br>
+        <aside>Skills :Completa juegos en uno o muy pocos dias, bueno en juegos puzle/acertijo , se adapta y aprende muy rapidamente a cualquier tipo de juego, enseña a sus compañeros a aprender / mejorar mecanicas en los juegos. Suele carrear.</aside><br><br>
+        <aside>Contras: Al ser rusheador suele aburrirse rapidamente de juegos que no contienen historia, no le gusta perder , si un juego no le gusta de entrada es muy dificil hacer que lo quiera jugar, su internet es realmente muy malo.</aside><br><br>
+        <aside>Historia: Draxtos comenzo a jugar videojuegos desde muy tempranada edad, al principio comenzo con la consola conocida como sega genesis pero al muy poco tiempo cambio a pc, y fue ahi donde comenzo a jugar juegos Shooter como por ejemplo , Counter Strike - Half Life - Kiss Psycho Circus, entre otros, dandole de esta manera mejor habilidad para afrontar juegos de ese genero. Silent hill Su juego preferido seria quien le daria su amor por el genero de terror psicologico / puzle que le duraria hasta la actualidad. No se sabe el numero exacto de juegos que ha rusheado, pero si se conoce una creciente lista que actualmente oscila en mas de 200 juegos terminados.</aside>
+        <div class="reset"></div>
+    </div>
 </content>
 <br><br><br>
-<footer>
 
+<footer>
 <!--pie de pagina-->
 <div class="pie-de-pagina" > 
     <a href="informacion.html" class="pie-de-pagina__informacion">Información</a> <br>
@@ -109,15 +109,17 @@
         </div>
     </div>
 </div>
-<img src="media/mail.png" class="pie-de-pagina__icono-mail">
-<img src="media/info.png" class="pie-de-pagina__icono-info">
-<img src="media/reco.png" class="pie-de-pagina__icono-reco">
-<img src="media/mapa.png" class="pie-de-pagina__icono-mapa">
+<img src="media/mail.png" class="pie-de-pagina__icono-mail" alt="icono mail">
+<img src="media/info.png" class="pie-de-pagina__icono-info" alt="icono informacion">
+<img src="media/reco.png" class="pie-de-pagina__icono-reco" alt="icono recomendaciones">
+<img src="media/mapa.png" class="pie-de-pagina__icono-mapa" alt="icono mapa de sitio">
 <t class="pie-de-pagina__slogan alinearGridCentro">NUNCA DESAFIES A UN TRP SI TU INTENCION ES SALIR VICTORIOSO DE ESE CAMPO DE BATALLA</t>
 </div>
-<a href="index.html" alt="logo trp"><img src="media/logo.png" class="logo-dos"></a>
+<a href="index.html"><img src="media/logo.png" class="logo-dos" alt="logo trp"></a>
 </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
+<!--js-->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
