--- a/index.html
+++ b/index.html
@@ -4,39 +4,36 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <meta name="keywords" content="trp,team,portada,">
+    <meta name="keywords" content="trp,team,portada">
     <meta name="description" content="Pagina oficial de streamers que conforman al team trp">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pagina Principal del Team T.R.P.</title>
     <link rel="stylesheet" href="css/estilos.css" />
-    
 </head>
-<body>
-    
-<!--Menu-->
+
+<body>    
+<!--Menu encabezado-->
 <div class="encabezado-de-pagina">
-<img src="media/logo.png" alt="logo trp" class="encabezado-de-pagina__logo-pagina">&nbsp;&nbsp;
-<ul class="menu-encabezado alinearGrid">
-    <li><a href="redes.html">Redes</a></li>
-    <li><a href="streams.html">Streams</a></li>
-    <li><a href="juegos.html">juegos</a></li>
-    <li><t id="integra">Integrantes</t>
+    <img src="media/logo.png" alt="logo trp" class="encabezado-de-pagina__logo-pagina">&nbsp;&nbsp;
+    <ul class="menu-encabezado alinearGrid">
+        <li><a href="redes.html">Redes</a></li>
+        <li><a href="streams.html">Streams</a></li>
+        <li><a href="juegos.html">juegos</a></li>
+        <li><t id="integra">Integrantes</t>
         <ul class="integrantes">
             <li><a href="draxtos.html">DraxtoS</a></li>
             <li><a href="aylencita.html">Aylencita</a></li>
             <li><a href="princess.html">Princess_nuala</a></li>
             <li><a href="diego.html">DiegoGunner</a></li>
         </ul>
-</ul>
-<t class="encabezado-de-pagina__trp-grande">T.R.P. TEAM</t>
+    </ul>
+    <t class="encabezado-de-pagina__trp-grande">T.R.P. TEAM</t>
 </div>
 
-
-
-<!--boton de las imagenes/videos-->
+<!--carousel & boton galeria-->
 <div class="cuerpo-index">
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
             <img src="Media/teamtrp.gif" class="cuerpo-index__ancho" alt="Imaginan animada donde sale el nombre del team y sus integrantes">
@@ -68,11 +65,10 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
             <a href="galeria.html" class="cuerpo-index__galeria" >Galeria</a>
         </div>
-</div>
+    </div>
 </div>        
 
 <footer>
-
 <!--pie de pagina-->
 <div class="pie-de-pagina" > 
         <a href="informacion.html" class="pie-de-pagina__informacion">Información</a> <br>
@@ -137,22 +133,17 @@
             </div>
         </div>
     </div>
-    <img src="media/mail.png" class="pie-de-pagina__icono-mail">
-    <img src="media/info.png" class="pie-de-pagina__icono-info">
-    <img src="media/reco.png" class="pie-de-pagina__icono-reco">
-    <img src="media/mapa.png" class="pie-de-pagina__icono-mapa">
+    <img src="media/mail.png" class="pie-de-pagina__icono-mail" alt="icono mail">
+    <img src="media/info.png" class="pie-de-pagina__icono-info" alt="icono informacion">
+    <img src="media/reco.png" class="pie-de-pagina__icono-reco" alt="icono recomendaciones">
+    <img src="media/mapa.png" class="pie-de-pagina__icono-mapa" alt="icono mapa de sitio">
     <t class="pie-de-pagina__slogan alinearGridCentro">NUNCA DESAFIES A UN TRP SI TU INTENCION ES SALIR VICTORIOSO DE ESE CAMPO DE BATALLA</t>
 </div>
-    <a href="index.html" alt="logo trp"><img src="media/logo.png" class="logo-dos"></a>
+<a href="index.html"><img src="media/logo.png" class="logo-dos" alt="logo trp"></a>
 </footer>
 
 
-
-
-
-
-
-
+<!--js-->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
