--- a/princess.html
+++ b/princess.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/estilos.css" />
     <meta name="keywords" content="princess_nuala,divertida,amable,buena,streaming">
     <meta name="description" content="Pagina oficial de streamers que conforman al team trp">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
@@ -26,25 +27,25 @@
             </ul>
     </ul>
     <t class="encabezado-de-pagina__trp-grande">T.R.P. TEAM</t>
-    </div>
+</div>
 <h1 class="centrar">-[T.R.P]-||Princess_Nuala</h1>
 
 <!--Logo de canal de cada Integrante-->
 <content id="co">
-<div class="logint">
-<img src="media/princess.png" alt="imagen de princess Nuala"class="logint__princess"></a>
-<aside>Genero de juegos favorito: No tiene favoritismo.</aside><br><br>
-<aside>Juego/saga favoritas: Dead By Daylight.</aside><br><br>
-<aside>Mayor skills en: Juegos de estrategia.</aside><br><br>
-<aside>Skills: Es muy buena en juegos de estrategia como Age of Empires, siempre busca divertirse con las personas que la acompañan en los juegos, intenta siempre ayudar a los demas hasta el ultimo momento, adora jugando con sus amigos, no le teme a jugar algo nuevo.</aside><br><br>
-<aside>Contras: Es realmente muy distraida, al punto de no escucharte si le explicas algo ... por 3era vez. Sus ganas de ayudar hasta el ultimo momento muchas veces le juega una mala pasada.</aside><br><br>
-<aside>Historia: Princess la ultima en ser integrada al team , comenzo su vida en los videojuegos ya hace varios años, si bien siempre jugo y aun lo hace para divertirse a diferencia de los demas integrantes su amor por los videojuegos la llevo a cruzarse en el camino de Aylencita quien entablaria una buena amistad con ella y se la presentaria a los otros 2 integrantes. Al principio no habia mucha simpatia con DraxtoS pero con el tiempo y luego de muchas horas de juego, se harian buenos amigos lo que la llevaria a ser una T.R.P. Actualmente Prncess es la miembro mas activa en Streaming del grupo siendo querida por todos gracias a su amabilidad y respetada gracias a que sus mods son los demas integrantes quienen no perdonan una a la hora de banear gente.</aside>
-<div class="reset"></div>
-</div>
+    <div class="logint">
+        <img src="media/princess.png" alt="imagen de princess Nuala"class="logint__princess"></a>
+        <aside>Genero de juegos favorito: No tiene favoritismo.</aside><br><br>
+        <aside>Juego/saga favoritas: Dead By Daylight.</aside><br><br>
+        <aside>Mayor skills en: Juegos de estrategia.</aside><br><br>
+        <aside>Skills: Es muy buena en juegos de estrategia como Age of Empires, siempre busca divertirse con las personas que la acompañan en los juegos, intenta siempre ayudar a los demas hasta el ultimo momento, adora jugando con sus amigos, no le teme a jugar algo nuevo.</aside><br><br>
+        <aside>Contras: Es realmente muy distraida, al punto de no escucharte si le explicas algo ... por 3era vez. Sus ganas de ayudar hasta el ultimo momento muchas veces le juega una mala pasada.</aside><br><br>
+        <aside>Historia: Princess la ultima en ser integrada al team , comenzo su vida en los videojuegos ya hace varios años, si bien siempre jugo y aun lo hace para divertirse a diferencia de los demas integrantes su amor por los videojuegos la llevo a cruzarse en el camino de Aylencita quien entablaria una buena amistad con ella y se la presentaria a los otros 2 integrantes. Al principio no habia mucha simpatia con DraxtoS pero con el tiempo y luego de muchas horas de juego, se harian buenos amigos lo que la llevaria a ser una T.R.P. Actualmente Prncess es la miembro mas activa en Streaming del grupo siendo querida por todos gracias a su amabilidad y respetada gracias a que sus mods son los demas integrantes quienen no perdonan una a la hora de banear gente.</aside>
+        <div class="reset"></div>
+    </div>
 </content>
 <br><br><br>
-<footer>
 
+<footer>
 <!--pie de pagina-->
 <div class="pie-de-pagina" > 
     <a href="informacion.html" class="pie-de-pagina__informacion">Información</a> <br>
@@ -109,15 +110,17 @@
         </div>
     </div>
 </div>
-<img src="media/mail.png" class="pie-de-pagina__icono-mail">
-<img src="media/info.png" class="pie-de-pagina__icono-info">
-<img src="media/reco.png" class="pie-de-pagina__icono-reco">
-<img src="media/mapa.png" class="pie-de-pagina__icono-mapa">
+<img src="media/mail.png" class="pie-de-pagina__icono-mail" alt="icono mail">
+<img src="media/info.png" class="pie-de-pagina__icono-info" alt="icono informacion">
+<img src="media/reco.png" class="pie-de-pagina__icono-reco" alt="icono recomendaciones">
+<img src="media/mapa.png" class="pie-de-pagina__icono-mapa" alt="icono mapa de sitio">
 <t class="pie-de-pagina__slogan alinearGridCentro">NUNCA DESAFIES A UN TRP SI TU INTENCION ES SALIR VICTORIOSO DE ESE CAMPO DE BATALLA</t>
 </div>
-<a href="index.html" alt="logo trp"><img src="media/logo.png" class="logo-dos"></a>
+<a href="index.html"><img src="media/logo.png" class="logo-dos" alt="logo trp"></a>
 </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
+<!--js-->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
