--- a/404.html
+++ b/404.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css" />
+    <meta name="keywords" content="error, 404,not found">
+    <meta name="description" content="Pagina oficial de streamers que conforman al team trp">
     <title>Error 404</title>
 </head>
 <body>
