--- a/aylencita.html
+++ b/aylencita.html
@@ -5,8 +5,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
     <title>-[T.R.P]-||Aylencita</title>
     <link rel="stylesheet" href="css/estilos.css" />
-    <meta name="keywords" content="aylencita,DBD">
+    <meta name="keywords" content="aylencita,dbd">
     <meta name="description" content="Pagina oficial de streamers que conforman al team trp">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
@@ -26,25 +27,26 @@
             </ul>
     </ul>
     <t class="encabezado-de-pagina__trp-grande">T.R.P. TEAM</t>
-    </div>
+</div>
 <h1 class="centrar">-[T.R.P]-||Aylencita</h1>
 
-<!--Logo de canal de cada Integrante-->
+<!--Logo de canal de cada Integrante e informacion-->
 <content id="co">
-<div class="logint">
-<img src="media/aylen.png" alt="imagen de aylencita"class="logint__aylen"></a>
-<aside>Genero de juegos favorito: No tiene favoritismo.</aside><br><br>
-<aside>Juego/saga favoritas: Valorant.</aside><br><br>
-<aside>Mayor skills en: Survivals Online.</aside><br><br>
-<aside>Skills: Suele adaptarse a cualquier juego, logrando ser buena en estos, si un juego con historia le gusta de verdad lo juega hasta terminarlo si es posible en el mismo dia que lo comenzo.</aside><br><br>
-<aside>Contras: Muy competitiva, no tiene mucha paciencia al jugar con personas random y aun menos en juegos puzle, no es buena opcion que la hagas perder.</aside><br><br>
-<aside>Historia: Su historia con los videojuegos comenzo hace muy poco, mas exactamente en cuanto conocio a 2 de los actuales miembros del grupo (Draxtos y DiegoGunner). Comenzo jugando algunas partidas con ellos para terminar jugando noches enteras hasta que salia el sol. Actualmente cuenta con mas de 1000 hs jugadas en DBD, no le molesta jugar sola de todas formas.</aside>
-<div class="reset"></div>
-</div>
+    <div class="logint">
+        <img src="media/aylen.png" alt="imagen de aylencita"class="logint__aylen"></a>
+        <aside>Genero de juegos favorito: No tiene favoritismo.</aside><br><br>
+        <aside>Juego/saga favoritas: Valorant.</aside><br><br>
+        <aside>Mayor skills en: Survivals Online.</aside><br><br>
+        <aside>Skills: Suele adaptarse a cualquier juego, logrando ser buena en estos, si un juego con historia le gusta de verdad lo juega hasta terminarlo si es posible en el mismo dia que lo comenzo.</aside><br><br>
+        <aside>Contras: Muy competitiva, no tiene mucha paciencia al jugar con personas random y aun menos en juegos puzle, no es buena opcion que la hagas perder.</aside><br><br>
+        <aside>Historia: Su historia con los videojuegos comenzo hace muy poco, mas exactamente en cuanto conocio a 2 de los actuales miembros del grupo (Draxtos y DiegoGunner). Comenzo jugando algunas partidas con ellos para terminar jugando noches enteras hasta que salia el sol. Actualmente cuenta con mas de 1000 hs jugadas en DBD, no le molesta jugar sola de todas formas.</aside>
+        <div class="reset"></div>
+    </div>
 </content>
-<br><br><br>
-<footer>
 
+<br><br><br>
+
+<footer>
 <!--pie de pagina-->
 <div class="pie-de-pagina" > 
     <a href="informacion.html" class="pie-de-pagina__informacion">Información</a> <br>
@@ -109,15 +111,17 @@
         </div>
     </div>
 </div>
-<img src="media/mail.png" class="pie-de-pagina__icono-mail">
-<img src="media/info.png" class="pie-de-pagina__icono-info">
-<img src="media/reco.png" class="pie-de-pagina__icono-reco">
-<img src="media/mapa.png" class="pie-de-pagina__icono-mapa">
+<img src="media/mail.png" class="pie-de-pagina__icono-mail" alt="icono mail">
+<img src="media/info.png" class="pie-de-pagina__icono-info" alt="icono informacion">
+<img src="media/reco.png" class="pie-de-pagina__icono-reco" alt="icono recomendaciones">
+<img src="media/mapa.png" class="pie-de-pagina__icono-mapa" alt="icono mapa de sitio">
 <t class="pie-de-pagina__slogan alinearGridCentro">NUNCA DESAFIES A UN TRP SI TU INTENCION ES SALIR VICTORIOSO DE ESE CAMPO DE BATALLA</t>
 </div>
-<a href="index.html" alt="logo trp"><img src="media/logo.png" class="logo-dos"></a>
+<a href="index.html"><img src="media/logo.png" class="logo-dos"alt="logo trp"></a>
 </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
+<!--js-->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
