--- a/redes.html
+++ b/redes.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="css/estilos.css" />
 <meta name="keywords" content="redes,contacto,sociales">
 <meta name="description" content="Pagina oficial de streamers que conforman al team trp">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -27,27 +27,24 @@
             </ul>
     </ul>
     <t class="encabezado-de-pagina__trp-grande">T.R.P. TEAM</t>
-    </div>
+</div>
 
 
 <content id="con">
-<div class="banner">
+    <div class="banner">
 <!--Canales TRP--> 
-    <a href="https://www.instagram.com/theredpatrol_team/?hl=es-la"target="_blank"><img src="media/igtrp.png" alt="Banner que lleva hacia el instagram del Team"class="banner__igtrp"></a>
-    <a href="https://www.youtube.com/channel/UCYDTo9rtFykEa-isCOhG3aQ"target="_blank"><img src="media/ytbtrp.png" alt="Banner que lleva hacia la pagina de youtube del Team" class="banner__ytbtrp"></a>
+        <a href="https://www.instagram.com/theredpatrol_team/?hl=es-la"target="_blank"><img src="media/igtrp.png" alt="Banner que lleva hacia el instagram del Team"class="banner__igtrp"></a>
+        <a href="https://www.youtube.com/channel/UCYDTo9rtFykEa-isCOhG3aQ"target="_blank"><img src="media/ytbtrp.png" alt="Banner que lleva hacia la pagina de youtube del Team" class="banner__ytbtrp"></a>
 <!--canales integrantes-->
-<img src="Media/bannerdrax.gif" alt="Banner con informacion de las redes de draxtos" class="banner__bdrax">
-<img src="media/bannerdiego.gif" alt="Banner con informacion de las redes de diegogunner" class="banner__bdiego">
-<img src="media/banneraylen.gif" alt="Banner con informacion de las redes de aylencita"class="banner__baylen">
-<img src="media/bannerprincess.gif" alt="Banner con informacion de las redes de princess nuala"class="banner__bprincess">
-
-</div>
+        <img src="Media/bannerdrax.gif" alt="Banner con informacion de las redes de draxtos" class="banner__bdrax">
+        <img src="media/bannerdiego.gif" alt="Banner con informacion de las redes de diegogunner" class="banner__bdiego">
+        <img src="media/banneraylen.gif" alt="Banner con informacion de las redes de aylencita"class="banner__baylen">
+        <img src="media/bannerprincess.gif" alt="Banner con informacion de las redes de princess nuala"class="banner__bprincess">
+    </div>
 </content>
 
-<br><br><br>
+
 <footer>
-
-
 <!--pie de pagina-->
 <div class="pie-de-pagina" > 
     <a href="informacion.html" class="pie-de-pagina__informacion">Información</a> <br>
@@ -112,15 +109,16 @@
         </div>
     </div>
 </div>
-<img src="media/mail.png" class="pie-de-pagina__icono-mail">
-<img src="media/info.png" class="pie-de-pagina__icono-info">
-<img src="media/reco.png" class="pie-de-pagina__icono-reco">
-<img src="media/mapa.png" class="pie-de-pagina__icono-mapa">
+<img src="media/mail.png" class="pie-de-pagina__icono-mail" alt="icono mail">
+<img src="media/info.png" class="pie-de-pagina__icono-info" alt="icono informacion">
+<img src="media/reco.png" class="pie-de-pagina__icono-reco" alt="icono recomendaciones">
+<img src="media/mapa.png" class="pie-de-pagina__icono-mapa" alt="icono mapa de sitio">
 <t class="pie-de-pagina__slogan alinearGridCentro">NUNCA DESAFIES A UN TRP SI TU INTENCION ES SALIR VICTORIOSO DE ESE CAMPO DE BATALLA</t>
 </div>
-<a href="index.html" alt="logo trp"><img src="media/logo.png" class="logo-dos"></a>
+<a href="index.html"><img src="media/logo.png" class="logo-dos" alt="logo trp"></a>
 </footer>
 
+<!--js-->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
