--- a/streams.html
+++ b/streams.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="css/estilos.css" />
     <meta name="keywords" content="streams,horarios,dias,canales">
     <meta name="description" content="Pagina oficial de streamers que conforman al team trp">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
 <!--Menu-->
 <div class="encabezado-de-pagina">
@@ -26,10 +27,11 @@
             </ul>
     </ul>
     <t class="encabezado-de-pagina__trp-grande">T.R.P. TEAM</t>
-    </div>
+</div>
+
 <h1 class="centrar">Bienvenidos a la seccion Streams</h1> <br>
 
-    <div class="streams">
+<div class="streams">
     <h3 class="diego centrar">DiegoGunner</h3>
     <dl class="diego__info centrar">
         <dt>Dias:</dt>
@@ -55,8 +57,8 @@
     <h3 class="centrar">DraxtoS</h3>
     <h3 class="centrar">Proximamente....</h3>
 <br><br><br>
-<footer>
 
+<footer>
 <!--pie de pagina-->
 <div class="pie-de-pagina" > 
     <a href="informacion.html" class="pie-de-pagina__informacion">Información</a> <br>
@@ -121,15 +123,17 @@
         </div>
     </div>
 </div>
-<img src="media/mail.png" class="pie-de-pagina__icono-mail">
-<img src="media/info.png" class="pie-de-pagina__icono-info">
-<img src="media/reco.png" class="pie-de-pagina__icono-reco">
-<img src="media/mapa.png" class="pie-de-pagina__icono-mapa">
+<img src="media/mail.png" class="pie-de-pagina__icono-mail" alt="icono mail">
+<img src="media/info.png" class="pie-de-pagina__icono-info" alt="icono informacion">
+<img src="media/reco.png" class="pie-de-pagina__icono-reco" alt="icono recomendaciones">
+<img src="media/mapa.png" class="pie-de-pagina__icono-mapa" alt="icono mapa de sitio">
 <t class="pie-de-pagina__slogan alinearGridCentro">NUNCA DESAFIES A UN TRP SI TU INTENCION ES SALIR VICTORIOSO DE ESE CAMPO DE BATALLA</t>
 </div>
-<a href="index.html" alt="logo trp"><img src="media/logo.png" class="logo-dos"></a>
+<a href="index.html"><img src="media/logo.png" class="logo-dos" alt="logo trp"></a>
 </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
+<!--js-->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
