mejora de carousel

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-            <img src="Media/teamtrp.gif" class="cuerpo-index__ancho" alt="Imaginan animada donde sale el nombre del team y sus integrantes">
+            <img src="Media/1.png" class="cuerpo-index__ancho" alt="Imaginan animada donde sale el nombre del team y sus integrantes">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
             </div>
@@ -66,7 +66,7 @@
             <a href="galeria.html" class="cuerpo-index__galeria" >Galeria</a>
         </div>
     </div>
-</div>        
+</div>         
 
 <footer>
 <!--pie de pagina-->
@@ -100,7 +100,7 @@
                             </div>
                         </fieldset>
                         </form>
-<!--texto a enviarnos-->
+<!--texto a enviarnos--> 
                         <form>
                             <p>¿Que le gustaria decirnos?</p>
                             <textarea rows="5" cols="35"></textarea><br><br>
